--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "jest-another-rpg",
+  "name": "rpg",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zwind66/jest-another-RPG.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zwind66/jest-another-RPG/issues"
-  },
-  "homepage": "https://github.com/zwind66/jest-another-RPG#readme",
-  "devDependencies": {
-    "jest": "^28.1.1"
+  "dependencies": {
+    "inquirer": "^7.0.3",
+    "jest": "^24.9.0"
   }
 }
+
